# firebase-db-rust

./: .env.example  COLLECTION_MANAGEMENT.md  CRUD_OPERATIONS.md  Cargo.toml  JSON_MANAGEMENT.md  QUERY_CAPABILITIES.md  README.md  SCHEMA_MANAGEMENT.md  current-users-schema.yaml  foo.json  schema.json  test-schema.json  test-schema.yaml
.claude/: statusline.sh
examples/: collections_demo.rs  crud_operations_demo.rs  enhanced_schema_export.rs  field_arguments_demo.rs  json_schema_demo.rs  queries.rs  schema_management.rs  test_auto_fields.rs  test_form_validation.rs
src/: collections.rs  error.rs  firebase.rs  json_manager.rs  lib.rs  main.rs  models.rs  query.rs  schema.rs  security_rules.rs  tui_form.rs
