[package]
name = "firebase_db"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
dotenv = "0.15"
jsonwebtoken = "9"
base64 = "0.22"
regex = "1.11"
clap = { version = "4.5", features = ["derive"] }
comfy-table = "7.1"
ratatui = "0.28"
crossterm = "0.28"
